--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 <p>Nome: Lucca</p>
                                 <p>Destino: Vila Olimpia</p>
                                 <p>Demanda: Entrega de Pacote</p>
+                                <p>Horário disponível: 07:00-09:00</p>
                             </div>
                         </article>             
                     </a>
@@ -47,6 +48,7 @@
                             <p>Nome: Enzo Fernandez</p>
                             <p>Destino: Alphaville</p>
                             <p>Demanda: Carona</p>
+                            <p>Horário para sair: 17:00-19:00</p>
                         </div>
                     </article>
                 </a>
@@ -60,6 +62,7 @@
                             <p>Nome: Mario Barotelli</p>
                             <p>Destino: Guarulhos</p>
                             <p>Serviço: Motorista</p>
+                            <p>Horário disponível: 11:00-13:00</p>
                         </div>
                     </article>
                 </a>
