--- a/tela3.html
+++ b/tela3.html
@@ -12,34 +12,36 @@
 
     <header class="header">
         <a href="index.html">
-        <img src="img/voltar.png">
+        <img alt="Ícone para voltar" src="img/voltar.png">
         </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+        <img alt="Ícone de carro" src="img/carro.png">
+        <img alt="Ícone de perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="perfilp">
             <h1>Enzo Fernandez</h1>
-            <img src="img/perfilp.png" class="perfilpimg">
+            <img alt="Imagem de perfil do Enzo Fernandez" src="img/perfilp.png" class="perfilpimg">
             <div class="telefoneposicao">
                 <p>(11)97333-7733</p>
-                <img src="img/telefone.png" class="telefone">
+                <img alt="Ícone de telefone" src="img/telefone.png" class="telefone">
             </div>
         </section>
         
         <section class="descricao">
+            <h2>Descrição</h2>
             <div class="texto">
-                <img src="img/dadospessoais.png">
+                <img alt="Ícone de dados pessoais" src="img/dadospessoais.png">
                 <p>Meu nome é Enzo, moro no Capão Redondo e vou para Itaquera toda quarta-feira e finais de semana. Frequentemente preciso de caronas para o condomínio Alphaville em São Paulo.</p>
             </div>
         </section>
 
-            <section class="mensagem">
-                <a href="tela4.html">
+        <section class="mensagem">
+            <h2>Mensagem</h2>
+            <a href="tela4.html">
                 <p>Mande uma mensagem para Enzo!</p>
-                </a>
-            </section>
+            </a>
+        </section>
     </main>
 
 </body>
