--- a/tela4.html
+++ b/tela4.html
@@ -12,26 +12,29 @@
 
     <header class="header">
         <a href="tela3.html">
-        <img src="img/voltar.png">
+            <img alt="Ícone para voltar" src="img/voltar.png">
         </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+        <img alt="Ícone de um carro" src="img/carro.png">
+        <img alt="Ícone do perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="mensagem">
-            <img src="img/perfilp.png" class="perfilimg">
+            <h2>Mensagem</h2>
+            <img alt="Imagem de perfil do Enzo" src="img/perfilp.png" class="perfilimg">
             <p>Mande uma mensagem para, Enzo:</p>
         </section>
 
         <section class="input">
-            <img src="img/microfone.png" class="icones">
+            <h2>Caixa de Mensagem</h2>
+            <img alt="Ícone de microfone" src="img/microfone.png" class="icones">
             <input type="text" placeholder="Digite sua mensagem" class="textoinput">
-            <img src="img/camera.png" class="icones">
+            <img alt="Ícone de câmera" src="img/camera.png" class="icones">
         </section>
 
         <section class="teclado">
-            <img src="img/teclado.png" class="teclado-img">
+            <h2>Teclado</h2>
+            <img alt="Imagem de um teclado" src="img/teclado.png" class="teclado-img">
         </section>
     </main>
 
