--- a/tela8.html
+++ b/tela8.html
@@ -12,36 +12,38 @@
 
     <header class="header">
         <a href="tela7.html">
-        <img src="img/voltar.png">
-    </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+            <img alt="Ícone para voltar" src="img/voltar.png">
+        </a>
+        <img alt="Ícone de um carro" src="img/carro.png">
+        <img alt="Ícone do perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="perfil">
-            <img src="img/perfilp.png" class="perfilimgs">
+            <h2>Perfil</h2>
+            <img alt="Imagem de perfil do usuário" src="img/perfilp.png" class="perfilimgs">
             <div class="opcoes">
                 <a href="tela6.html">
-                <p><img src="img/mensagemazul.png"> Mensagem</p>
+                    <p><img alt="Ícone de mensagem azul" src="img/mensagemazul.png"> Mensagem</p>
                 </a>
-                <p><img src="img/localizacaoazul.png"> Localização</p>
+                <p><img alt="Ícone de localização azul" src="img/localizacaoazul.png"> Localização</p>
             </div>
         </section>
 
         <section class="mapa">
+            <h2>Mapa</h2>
             <p>Clique para visualizar o mapa completo:</p>
             <a href="tela9.html">
-            <img src="img/mapa.png" class="mapa-img">
-        </a>
+                <img alt="Imagem do mapa com rotas" src="img/mapa.png" class="mapa-img">
+            </a>
         </section>
     </main>
 
-        <footer class="rodape">
-            <a href="index.html">
+    <footer class="rodape">
+        <a href="index.html">
             <p>CANCELAR CARONA!</p>
         </a>
-        </footer>
-    
+    </footer>
+
 </body>
 </html>
