--- a/tela9.html
+++ b/tela9.html
@@ -12,16 +12,18 @@
 
     <header class="header">
         <a href="tela8.html">
-        <img src="img/voltar.png">
-    </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+            <img alt="Ícone para voltar" src="img/voltar.png">
+        </a>
+        <img alt="Ícone de um carro" src="img/carro.png">
+        <img alt="Ícone do perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="mapa">
-            <img src="img/mapa.png" class="mapa-img">
+            <h2>Visualização do Mapa</h2>
+            <img alt="Imagem detalhada do mapa com rotas" src="img/mapa.png" class="mapa-img">
         </section>
+    </main>
 
 </body>
 </html>
