--- a/tela2.html
+++ b/tela2.html
@@ -12,41 +12,41 @@
 
     <header class="header">
         <a href="index.html">
-        <img src="img/menu.png">
+        <img alt="Imagem de menu" src="img/menu.png">
         </a>
     </header>
     
     <main>
         <div class="perfilp">
-            <img src="img/perfilp.png" class="perfilpimg">
+            <img alt="imagem de foto de perfil" src="img/perfilp.png" class="perfilpimg">
             <h2>João Marcelo</h2>
-            <p><img src="img/estrela.png" class="star"> 4.78</p>
+            <p><img alt="imagem de estrela" src="img/estrela.png" class="star"> 4.78</p>
         </div>
 
         <nav class="menu">
             <ul>
                 <li class="menuitem">
-                    <img src="img/casa.png">
+                    <img alt="imagem de casa" src="img/casa.png">
                     <p>Home</p>
                 </li>
                 <li class="menuitem">
-                    <img src="img/atividade.png">
+                    <img alt="imagem de atividade" src="img/atividade.png">
                     <p>Atividade</p>
                 </li>
                 <li class="menuitem">
-                    <img src="img/pagar.png">
+                    <img alt="imagem de pagamento" src="img/pagar.png">
                     <p>Pagamento</p>
                 </li>
                 <li class="menuitem">
-                    <img src="img/servicos.png">
+                    <img alt="imagem de serviços" src="img/servicos.png">
                     <p>Serviços</p>
                  </li>
                 <li class="menuitem">
-                    <img src="img/configuracoes.png">
+                    <img alt="imagem de configuração" src="img/configuracoes.png">
                     <p>Configurações</p>
                 </li>
                 <li class="menuitem">
-                    <img src="img/logout.png">
+                    <img alt="imagem de logout" src="img/logout.png">
                     <p>Logout</p>
                 </li>
             </ul>
