--- a/tela3v2.html
+++ b/tela3v2.html
@@ -12,34 +12,36 @@
 
     <header class="header">
         <a href="index.html">
-        <img src="img/voltar.png">
+            <img alt="Ícone para voltar" src="img/voltar.png">
         </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+        <img alt="Ícone de um carro" src="img/carro.png">
+        <img alt="Ícone do perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="perfilp">
             <h1>Lucca</h1>
-            <img src="img/perfilp.png" class="perfilpimg">
+            <img alt="Imagem de perfil do Lucca" src="img/perfilp.png" class="perfilpimg">
             <div class="telefoneposicao">
                 <p>(11)97253-7733</p>
-                <img src="img/telefone.png" class="telefone">
+                <img alt="Ícone de telefone" src="img/telefone.png" class="telefone">
             </div>
         </section>
         
-            <section class="descricao">
-                <div class="texto">
-                    <img src="img/dadospessoais.png">
-                    <p>Olá, meu nome é lucca, moro em Itaquera e busco caronas para o meu trabalho localizado na Vila Olímpia todos os dias.</p>
-                </div>
-            </section>
+        <section class="descricao">
+            <h2>Descrição</h2>
+            <div class="texto">
+                <img alt="Ícone de dados pessoais" src="img/dadospessoais.png">
+                <p>Olá, meu nome é Lucca, moro em Itaquera e busco caronas para o meu trabalho localizado na Vila Olímpia todos os dias.</p>
+            </div>
+        </section>
 
-            <section class="mensagem">
-                <a href="tela4v2.html">
+        <section class="mensagem">
+            <h2>Mensagem</h2>
+            <a href="tela4v2.html">
                 <p>Mande uma mensagem para Lucca!</p>
-                </a>
-            </section>
+            </a>
+        </section>
     </main>
 
 </body>
