--- a/tela5.html
+++ b/tela5.html
@@ -12,48 +12,53 @@
 
     <header class="header">
         <a href="index.html">
-        <img src="img/voltar.png">
+            <img alt="Ícone para voltar" src="img/voltar.png">
         </a>
-        <img src="img/carro.png">
-        <img src="img/perfil.png">
+        <img alt="Ícone de um carro" src="img/carro.png">
+        <img alt="Ícone do perfil do usuário" src="img/perfil.png">
     </header>
 
     <main>
         <section class="perfilp">
             <h1>Mario Balotelli</h1>
-            <img src="img/perfilp.png" class="perfilpimg">
+            <img alt="Imagem de perfil do Mario Balotelli" src="img/perfilp.png" class="perfilpimg">
             <div class="telefoneposicao">
                 <p>(11)97693-7733</p>
-                <img src="img/telefone.png" class="telefone">
+                <img alt="Ícone de telefone" src="img/telefone.png" class="telefone">
                 <a href="tela6.html">
-                <img src="img/balaomensagem.png" class="telefone">
+                    <img alt="Ícone de mensagem" src="img/balaomensagem.png" class="telefone">
                 </a>
             </div>
         </section>
         
-            <section class="descricao">
-                <article class="texto">
-                    <img src="img/dadospessoais.png">
-                    <p>Meu nome é Mario Balotelli, ofereço 
-                        caronas a 4 anos, os caminhos que
-                        percorro com maior frequência são
-                        de Guarulhos para São Paulo e de 
-                        São Paulo para Guarulhos.</p>
-                </article>
-            </section>
+        <section class="descricao">
+            <h2>Descrição</h2>
+            <article class="texto">
+                <h3>Dados Pessoais</h3>
+                <img alt="Ícone de dados pessoais" src="img/dadospessoais.png">
+                <p>Meu nome é Mario Balotelli, ofereço 
+                    caronas há 4 anos. Os caminhos que
+                    percorro com maior frequência são
+                    de Guarulhos para São Paulo e de 
+                    São Paulo para Guarulhos.</p>
+            </article>
+        </section>
 
-            <section class="caixamensagem">
-                <div class="mensagem">
-                    <a href="tela7.html">
+        <section class="caixamensagem">
+            <h2>Ações Disponíveis</h2>
+            <article class="mensagem">
+                <h3>Enviar Produto</h3>
+                <a href="tela7.html">
                     <p>Enviar produto!</p>
-                    </a>
-                </div>
-                <div class="mensagem">
-                    <a href="tela7.html">
+                </a>
+            </article>
+            <article class="mensagem">
+                <h3>Solicitar Carona</h3>
+                <a href="tela7.html">
                     <p>Solicitar carona</p>
-                    </a>
-                </div>
-            </section>
+                </a>
+            </article>
+        </section>
     </main>
 
 </body>
