--- a/tela7.html
+++ b/tela7.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela 7</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/tela7styles.css">
 </head>
-
 <body>
-
     <header class="header">
         <a href="tela5.html">
             <img alt="Ícone para voltar" src="img/voltar.png">
@@ -23,11 +20,11 @@
             <h2>Endereços</h2>
             <div class="endereco">
                 <img alt="Ícone de localização azul" src="img/localizacaoazul.png">
-                <input placeholder="Endereço de saída.">
+                <input placeholder="Endereço de saída." type="text">
             </div>
             <div class="endereco">
                 <img alt="Ícone de localização azul" src="img/localizacaoazul.png">
-                <input placeholder="Endereço de chegada.">
+                <input placeholder="Endereço de chegada." type="text">
             </div>
             <div class="botoes">
                 <img alt="Ícone para adicionar mais informações" src="img/mais.png">
@@ -71,6 +68,7 @@
             </ul>
         </section>
     </main>
+
     <section class="validacaoDemanda">
         <h2>Validação de Demanda</h2>
         <div class="validacao">
@@ -79,14 +77,14 @@
             <button id="validarDemanda">Validar Demanda</button>
         </div>
     </section>
-
+    
     <section class="resultadoDemanda">
         <h2>Resultado</h2>
         <p id="resultado"></p>
     </section>
-    
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
