--- a/tela7.html
+++ b/tela7.html
@@ -79,7 +79,7 @@
     </section>
     
     <section class="resultadoDemanda">
-        <h2>Resultado</h2>
+        <h2>Disponibilidade</h2>
         <p id="resultado"></p>
     </section>
 
